--- a/app/src/main/res/layout/ball_direction.xml
+++ b/app/src/main/res/layout/ball_direction.xml
@@ -165,20 +165,26 @@
         android:id="@+id/first"
         android:layout_width="112dp"
         android:layout_height="112dp"
-        tools:layout_editor_absoluteX="494dp"
-        tools:layout_editor_absoluteY="677dp" />
+        android:layout_marginStart="191dp"
+        android:layout_marginBottom="95dp"
+        app:layout_constraintBottom_toTopOf="@+id/bt_error"
+        app:layout_constraintStart_toEndOf="@+id/third" />
 
     <Button
         android:id="@+id/second"
         android:layout_width="112dp"
         android:layout_height="112dp"
-        tools:layout_editor_absoluteX="344dp"
-        tools:layout_editor_absoluteY="537dp" />
+        android:layout_marginEnd="344dp"
+        android:layout_marginBottom="280dp"
+        app:layout_constraintBottom_toTopOf="@+id/bt_out"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
         android:id="@+id/third"
         android:layout_width="112dp"
         android:layout_height="112dp"
-        tools:layout_editor_absoluteX="191dp"
-        tools:layout_editor_absoluteY="667dp" />
+        android:layout_marginStart="191dp"
+        android:layout_marginBottom="501dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
